--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
@@ -5,7 +5,7 @@
       <th mat-header-cell mat-sort-header *matHeaderCellDef>
         {{getColumnLabel(column)}}
       </th>
-      <ng-container *ngIf="!column.displayAsGrade && !column.displayAsEmployee">
+      <ng-container *ngIf="!column.displayAsGrade && !column.displayAsEmployee && !column.displayAsStatus">
         <td mat-cell *matCellDef="let element" [matTooltip]="column.isShrinkColumn?getColumnValue(column,element):''"
           [ngClass]="{'td-label':column.isShrinkColumn}">
           <span [ngClass]="{'color-warn':getIsElementWarnColor(column,element)}" class="nowrap">{{getColumnValue(column,
@@ -27,6 +27,12 @@
       <ng-container *ngIf="column.displayAsGrade">
         <td mat-cell *matCellDef="let element">
           <grade [grade]="getColumnValue(column, element)"></grade>
+        </td>
+      </ng-container>
+      <ng-container *ngIf="column.displayAsStatus">
+        <td mat-cell *matCellDef="let element">
+          <chips-status [status]="getColumnStatus(column, element)"
+            [value]="getColumnValue(column, element)"></chips-status>
         </td>
       </ng-container>
       <ng-container>
