--- a/client/src/app/modules/miscellaneous/components/tiers-followup/tiers-followup.component.html
+++ b/client/src/app/modules/miscellaneous/components/tiers-followup/tiers-followup.component.html
@@ -58,4 +58,6 @@
     tableName="Suivi factures" [filterText]="searchText"></sort-table>
   <sort-table *ngIf='invoice!=undefined' [columns]="displayedColumns" [values]="invoice.tiersFollowups"
     tableName="Suivi factures" [filterText]="searchText"></sort-table>
+  <sort-table *ngIf='affaire!=undefined' [columns]="displayedColumns" [values]="affaire.tiersFollowups"
+    tableName="Suivi affaires" [filterText]="searchText"></sort-table>
 </div>
