--- a/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
+++ b/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
@@ -56,8 +56,7 @@
       </td>
       <td>
         <generic-input [(model)]="affaire.acronym" label="Sigle" [form]="affaireForm" propertyName="acronym"
-          [isMandatory]="false" [isDisabled]="!editMode" [conditionnalRequired]="!this.affaire.isIndividual"
-          [maxLength]="150"></generic-input>
+          [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="150"></generic-input>
       </td>
     </tr>
   </table>
