--- a/client/src/app/modules/quotation/components/affaire/affaire.component.html
+++ b/client/src/app/modules/quotation/components/affaire/affaire.component.html
@@ -19,6 +19,13 @@
       [isForTiersIntegration]="true">
     </provision-list>
   </mat-tab>
+  <mat-tab label="Suivi" *ngIf="affaire && affaire.id">
+    <tiers-followup [affaire]="affaire" [editMode]="true"></tiers-followup>
+  </mat-tab>
+  <mat-tab label="Documents" *ngIf="affaire && affaire.id">
+    <attachments [entity]="affaire" [editMode]="editMode" [entityType]="AFFAIRE_ENTITY_TYPE.entityType">
+    </attachments>
+  </mat-tab>
   <mat-tab label="Historique" *ngIf="affaire && affaire.id">
     <history [entity]="affaire" [entityType]="AFFAIRE_ENTITY_TYPE"></history>
   </mat-tab>
