--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1319,6 +1319,34 @@
                 [isDisabled]="!editMode"></select-followup>
             </td>
           </tr>
+          <tr>
+            <td>
+              <select-tiers-category [(model)]="constant.tiersCategoryPresse" label="Catégorie du tiers - Presse"
+                [form]="constantForm" propertyName="tiersCategoryPresse" [isMandatory]="true"
+                [isDisabled]="!editMode"></select-tiers-category>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <select-rff-frequency [(model)]="constant.rffFrequencyAnnual" label="Périodicité des RFF - Annuel"
+                [form]="constantForm" propertyName="rffFrequencyAnnual " [isMandatory]="true"
+                [isDisabled]="!editMode"></select-rff-frequency>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <select-rff-frequency [(model)]="constant.rffFrequencyQuarterly" label="Périodicité des RFF - Trimestiel"
+                [form]="constantForm" propertyName="rffFrequencyQuarterly " [isMandatory]="true"
+                [isDisabled]="!editMode"></select-rff-frequency>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <select-rff-frequency [(model)]="constant.rffFrequencyMonthly" label="Périodicité des RFF - Mensuel"
+                [form]="constantForm" propertyName="rffFrequencyMonthly " [isMandatory]="true"
+                [isDisabled]="!editMode"></select-rff-frequency>
+            </td>
+          </tr>
         </table>
       </fieldset>
     </div>
