--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -363,7 +363,7 @@
   <mat-icon>payments</mat-icon>
 </button>
 <button
-  *ngIf="canAddCreditNoteForCustomerOrderInvoice() && invoice && invoice.customerOrder && (invoice.code==invoiceStatusSend.code  )"
+  *ngIf="canAddCreditNoteForCustomerOrderInvoice() && invoice && invoice.customerOrder && (invoice.invoiceStatus.code==invoiceStatusSend.code  )"
   matTooltip="Générer un avoir" mat-fab color="accent" class="fourth-fab-button"
   (click)="generateCreditNoteForCustomerOrderInvoice($event)">
   <mat-icon>shopping_cart_checkout</mat-icon>
