--- a/client/src/app/modules/quotation/guichet-unique-status/guichet-unique-status.component.html
+++ b/client/src/app/modules/quotation/guichet-unique-status/guichet-unique-status.component.html
@@ -28,6 +28,9 @@
                       {{rejectionReason.label}}
                     </li>
                   </ul>
+                </li>
+                <li *ngIf="validation.validationObservation">Observations : {{validation.validationObservation |
+                  trustHtml}}</li>
               </ul>
             </ul>
           </mat-step>
