--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -243,6 +243,11 @@
           <invoice-list *ngIf="this.invoiceSearch.customerOrders && this.invoiceSearch.customerOrders.length>0"
             [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
         </mat-tab>
+        <mat-tab label="RFF" *ngIf="rffSearch && rffSearch.responsable  ">
+          <div class="mat-elevation-z2 form-div">
+            <rff-list [rffSearch]="rffSearch" [isForTiersIntegration]="true"></rff-list>
+          </div>
+        </mat-tab>
         <mat-tab label="Suivi" *ngIf="selectedResponsable?.id!=null && selectedResponsable?.id!=undefined">
           <tiers-followup [tiers]="selectedResponsable!" [editMode]="editMode"></tiers-followup>
         </mat-tab>
