--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -59,7 +59,8 @@
     </table>
   </div>
 </div>
-<button matTooltip="Exporter" mat-fab color="accent" class="second-fab-button" [matMenuTriggerFor]="menu">
+<button matTooltip="Exporter" mat-fab color="accent" class="second-fab-button" [matMenuTriggerFor]="menu"
+  *ngIf="!tiersToDisplay">
   <mat-icon>file_download</mat-icon>
   <mat-menu #menu="matMenu" style="min-height: 0px;padding: 0;" xPosition="before">
     <button mat-menu-item (click)="exportGrandLivre()"
@@ -87,7 +88,7 @@
   (auxclick)=" createAccountingRecords($event)">
   <mat-icon>add</mat-icon>
 </button>
-<button matTooltip="Télécharger un relevé de comptes" mat-fab color="accent" class="third-fab-button"
+<button matTooltip="Télécharger un relevé de comptes" mat-fab color="accent" class="second-fab-button"
   *ngIf="tiersToDisplay" (click)="downloadBillingClosureReceipt()">
   <mat-icon>download</mat-icon>
 </button>
