--- a/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
+++ b/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
@@ -122,7 +122,7 @@
           [isMandatory]="false" [isDisabled]="!editMode" label="Forme juridique"></autocomplete-forme-juridique>
       </td>
       <td>
-        <select-forme-exercice-activite-principal [(model)]="affaire.mainActivity" label="Forme de l'exercice"
+        <select-forme-exercice-activite-principal [(model)]="affaire.mainActivity" label="Forme de l'actvité"
           [form]="affaireForm" propertyName="mainActivity" [isMandatory]="false"
           [isDisabled]="!editMode"></select-forme-exercice-activite-principal>
       </td>
