--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -35,6 +35,10 @@
         </table>
       </div>
     </mat-tab>
+    <mat-tab label="Options"
+      *ngIf="provision && provision.provisionType && provision.provisionType.isDisplayActeDepositScreen">
+      <acte-deposit [editMode]="editMode" [provision]="provision" [affaire]="affaire"></acte-deposit>
+    </mat-tab>
     <mat-tab label="Options">
       <provision-options [editMode]="editMode" [provision]="provision" (provisionChange)="provisionChangeFunction()">
       </provision-options>
