--- a/client/src/app/modules/monitoring/components/batch-list/batch-list.component.html
+++ b/client/src/app/modules/monitoring/components/batch-list/batch-list.component.html
@@ -10,7 +10,7 @@
           propertyName="batchSettings" [isMandatory]="false" [isDisabled]="false"></select-batch-settings>
       </td>
       <td>
-        <select-node [(model)]="batchSearch.nodes" label="Batch" [form]="batchSearchForm" propertyName="nodes"
+        <select-node [(model)]="batchSearch.nodes" label="Noeud" [form]="batchSearchForm" propertyName="nodes"
           [isMandatory]="false" [isDisabled]="false"></select-node>
       </td>
       <td>
